[package]
name = "name-tokenizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
devnet = []


[dependencies]
solana-program = "1.16.16"
num_enum = "0.5.4"
borsh = "0.10.3"
thiserror = "1.0.44"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.1"
spl-token = {version="4.0.0", features= ["no-entrypoint"]}
bonfida-utils = "0.4.2"
spl-associated-token-account = {version = "2.3.0", features = ["no-entrypoint"]}
spl-name-service = { version = "0.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "4.0.0" }

ahash = "=0.8.6"


[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.16.0"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "1.16.0"
tokio = {version="1.6", features = ["macros"]}



[lib]
crate-type = ["cdylib", "lib"]
